--- a/client/src/components/TrailTable/TrailTable.module.css
+++ b/client/src/components/TrailTable/TrailTable.module.css
@@ -5,26 +5,41 @@
     background: rgb(235, 255, 161);
 }
 
+tr:nth-child(odd){
+    background: rgb(255, 243, 174);
+}
+
 td:nth-child(3){
     text-align: center;
+    padding: 3px;
+}
+
+td:nth-child(2){
+    text-align: center;
+    padding: 3px;
 }
 
 th {
-    background: rgb(147, 255, 147);
+    background: rgb(232, 255, 232);
     margin-right: 5px;
 }
 
 table {
-    width: 500px;
+    width: 600px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .tablewrapper {
-    border: 1px solid black;
-    width: 500px;
+    width: 600px;
     margin: 0 auto;
 }
 
 i {
     width: 10px;
     height: auto;
+}
+
+.compWrapper > h1 {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
