--- a/client/src/components/TripleCrownTable/TripleCrownTable.module.css
+++ b/client/src/components/TripleCrownTable/TripleCrownTable.module.css
@@ -1,18 +1,13 @@
 
 
-.td {
+.tdcrown {
     text-align: left;
-    background: rgb(210, 255, 252);
+    background: rgb(235, 255, 161);
 }
 
-.tr:nth-child(odd){
-    background: rgb(211, 255, 240);
+tr:nth-child(odd){
+    background: rgb(255, 243, 174);
 }
-
-.tr:nth-child(even){
-    background: rgb(165, 216, 255);
-}
-
 
 td:nth-child(3){
     text-align: center;
@@ -24,16 +19,17 @@ td:nth-child(2){
     padding: 3px;
 }
 
+th {
+    background: rgb(232, 255, 232);
+    margin-right: 5px;
+}
+
 table {
     width: 600px;
     font-family: 'Roboto', sans-serif;
 }
 
-.th > th {
-    background: rgb(255, 245, 213);
-}
-
-.tablewrapper {
+.tablewrappercrown {
     width: 600px;
     margin: 0 auto;
 }
@@ -43,7 +39,7 @@ i {
     height: auto;
 }
 
-.compWrapper > h2 {
+.compWrapperCrown > h2 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
