--- a/client/src/components/TrailTable/TrailTable.module.css
+++ b/client/src/components/TrailTable/TrailTable.module.css
@@ -25,7 +25,7 @@ td:nth-child(2){
 }
 
 table {
-    width: 600px;
+    width: 1100px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -34,7 +34,7 @@ table {
 }
 
 .tablewrapper {
-    width: 600px;
+    width: 1100px;
     margin: 0 auto;
 }
 
@@ -46,4 +46,16 @@ i {
 .compWrapper > h2 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
+}
+
+@media(max-width: 1100px){
+    table {
+        width: 100%;
+        font-family: 'Roboto', sans-serif;
+    }
+    .tablewrapper {
+        width: 100%;
+        margin: 0 auto;
+    }
+
 }
