--- a/client/src/components/TripleCrownTable/TripleCrownTable.module.css
+++ b/client/src/components/TripleCrownTable/TripleCrownTable.module.css
@@ -9,6 +9,21 @@ tr:nth-child(odd){
     background: rgb(255, 243, 174);
 }
 
+td:nth-child(6){
+    font-size: 10pt;
+    text-align: center;
+    padding: 3px;
+}
+td:nth-child(5){
+    text-align: center;
+    padding: 3px;
+}
+
+td:nth-child(4){
+    text-align: center;
+    padding: 3px;
+}
+
 td:nth-child(3){
     text-align: center;
     padding: 3px;
@@ -21,16 +36,25 @@ td:nth-child(2){
 
 th {
     background: rgb(232, 255, 232);
-    margin-right: 5px;
+}
+
+th:nth-child(5){
+    font-size: 10pt;
+}
+th:nth-child(5){
+    font-size: 10pt;
+}
+th:nth-child(4){
+    font-size: 10pt;
 }
 
 table {
-    width: 600px;
+    width: 1100px;
     font-family: 'Roboto', sans-serif;
 }
 
 .tablewrappercrown {
-    width: 600px;
+    width: 1100px;
     margin: 0 auto;
 }
 
@@ -42,4 +66,16 @@ i {
 .compWrapperCrown > h2 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
+}
+
+@media(max-width: 1100px){
+    table {
+        width: 100%;
+        font-family: 'Roboto', sans-serif;
+    }
+    .tablewrappercrown {
+        width: 100%;
+        margin: 0 auto;
+    }
+
 }
