--- a/client/src/containers/MainDashboard/MainDashboard.module.css
+++ b/client/src/containers/MainDashboard/MainDashboard.module.css
@@ -1,15 +1,28 @@
+.container {
+  width: 100%;
+}
+
 .header {
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    background: rgb(237, 237, 237);
+  border: 1px solid black;
+  width: 100%;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  background: rgb(237, 237, 237);
+}
+
+.header > select {
+  width: 20em;
+  text-align: center;
+  height: 20px;
+  margin-bottom: 10px;
+  background: rgb(176, 255, 176);
+  font-weight: bold;
+  text-align-last: center;
+}
+
+@media(max-width: 1100px){
+  .header {
+    width: 100%;
   }
-  
-  .header > select {
-    width: 20em;
-    text-align: center;
-    height: 20px;
-    margin-bottom: 10px;
-    background: rgb(176, 255, 176);
-    font-weight: bold;
-    text-align-last: center;
-  }
+}
+
