--- a/client/src/containers/MainDashboard/MainDashboard.module.css
+++ b/client/src/containers/MainDashboard/MainDashboard.module.css
@@ -1,10 +1,8 @@
 .container {
-  width: 100%;
+  background: rgb(254, 255, 228);
 }
 
 .header {
-  border: 1px solid black;
-  width: 100%;
   text-align: center;
   font-family: 'Roboto', sans-serif;
   background: rgb(237, 237, 237);
@@ -19,10 +17,3 @@
   font-weight: bold;
   text-align-last: center;
 }
-
-@media(max-width: 1100px){
-  .header {
-    width: 100%;
-  }
-}
-
