--- a/client/src/components/PCT/KeyFacts/KeyFacts.module.css
+++ b/client/src/components/PCT/KeyFacts/KeyFacts.module.css
@@ -1,8 +1,20 @@
 .keyFacts {
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  .keyFacts > ul {
-    font-size: 18pt;
-    font-family: 'Roboto', sans-serif;
-  }
+  font-family: 'Roboto', sans-serif;
+}
+
+.keyFacts > ul {
+  font-size: 18pt;
+  font-family: 'Roboto', sans-serif;
+}
+
+.myTable {
+  width: 350px;
+  margin: 0 auto;
+}
+
+td:nth-child(1){
+  font-weight: bold;
+}
+
+
+
