--- a/client/src/components/TrailTable/TrailTable.module.css
+++ b/client/src/components/TrailTable/TrailTable.module.css
@@ -25,16 +25,21 @@ td:nth-child(2){
 }
 
 table {
-    width: 1100px;
+    width: 100vw;
     font-family: 'Roboto', sans-serif;
+    border-collapse: collapse;
 }
 
 .th > th {
     background: rgb(255, 245, 213);
 }
 
+td, th {
+    border: 1px solid black;
+}
+
 .tablewrapper {
-    width: 1100px;
+    width: 100vw;
     margin: 0 auto;
 }
 
@@ -49,5 +54,5 @@ i {
 }
 
 .compWrapper {
-    background: white;
+    width: 100vw;
 }
