--- a/client/src/components/TripleCrownTable/TripleCrownTable.module.css
+++ b/client/src/components/TripleCrownTable/TripleCrownTable.module.css
@@ -6,7 +6,7 @@
 }
 
 tr:nth-child(odd){
-    background: rgb(255, 243, 174);
+    background: rgb(255, 247, 199)
 }
 
 td:nth-child(6){
@@ -49,12 +49,12 @@ th:nth-child(4){
 }
 
 table {
-    width: 1100px;
+    width: 100vw;
     font-family: 'Roboto', sans-serif;
 }
 
 .tablewrappercrown {
-    width: 1100px;
+    width: 100vw;
     margin: 0 auto;
 }
 
@@ -69,5 +69,5 @@ i {
 }
 
 .compWrapperCrown {
-    background: white;
+    width: 100vw;
 }
