--- a/client/src/components/PCT/InDepthStats/InDepthStats.module.css
+++ b/client/src/components/PCT/InDepthStats/InDepthStats.module.css
@@ -20,6 +20,12 @@
   td {
       padding: 10px 0;
   }
+
+  @media(max-width: 400px){
+      .myTable {
+          max-width: 300px;
+      }
+  }
   
   
   
