mobile view edits

--- a/client/src/components/PCT/PCT.module.css
+++ b/client/src/components/PCT/PCT.module.css
@@ -22,6 +22,10 @@
     grid-auto-rows: minmax(80px, auto);
   }
 
+  .wrapper > div {
+    border-radius: 0;
+  }
+
   .map > img {
     max-height: 400px;
   }
