--- a/client/src/components/TripleCrownTable/TripleCrownTable.module.css
+++ b/client/src/components/TripleCrownTable/TripleCrownTable.module.css
@@ -60,7 +60,8 @@ i {
 
 @media(max-width: 470px){
     .compWrapperCrown {
-        display: none;
+        /*display: none;*/
+        overflow: scroll;
     }   
 
 }
