--- a/client/src/containers/MainDashboard/MainDashboard.module.css
+++ b/client/src/containers/MainDashboard/MainDashboard.module.css
@@ -18,6 +18,11 @@
   text-align-last: center;
 }
 
+#headerPrompt {
+  margin-top: 40px;
+  padding-top: 40px;
+}
+
 @media(max-width: 400px){
   .container {
     display: grid;
