--- a/client/src/components/TripleCrownTable/TripleCrownTable.module.css
+++ b/client/src/components/TripleCrownTable/TripleCrownTable.module.css
@@ -1,4 +1,7 @@
-
+/* .tableWrapperCrown {
+    margin-left: 40px;
+    margin-right: 40px;
+} */
 
 .tdcrown {
     text-align: left;
@@ -60,7 +63,8 @@ i {
 
 @media(max-width: 470px){
     .compWrapperCrown {
-        display: none;
+        /*display: none;*/
+        overflow: scroll;
     }   
 
 }
