--- a/client/src/containers/MainDashboard/MainDashboard.module.css
+++ b/client/src/containers/MainDashboard/MainDashboard.module.css
@@ -1,3 +1,5 @@
+
+
 .container {
   background: rgb(220, 235, 220);
 }
@@ -6,6 +8,10 @@
   text-align: center;
   font-family: 'Roboto', sans-serif;
   background: rgb(237, 237, 237);
+}
+
+.header > h1 {
+  padding-bottom: 10px;
 }
 
 .header > select {
