--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,43 @@
-body {
-    margin: 0;
-    box-sizing: border-box;
-    background: rgb(220, 235, 220);
+#the-dropdown-container {
+  display: block;
+  margin: 0 auto;
+  width: 12em;
+}
+
+#the-dropdown {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
+	font-size: 16px;
+	font-family: sans-serif;
+	font-weight: 700;
+	color: rgb(75, 105, 78);
+	line-height: 1.3;
+	padding: .6em 1.4em .5em .8em;
+	width: 100%;
+	max-width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+	border: 1px solid rgb(86, 134, 89);
+	box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+	border-radius: .5em;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+}
+
+#the-dropdown:hover {
+	border-color: rgb(36, 124, 48);
+}
+
+#the-dropdown:focus {
+	border-color: rgb(66, 128, 47);
+	box-shadow: 0 0 1px 3px rgba(51, 136, 47, 0.7);
+	box-shadow: 0 0 0 3px -moz-mac-focusring;
+	color: rgb(82, 143, 80);
+	outline: none;
+}
+
+#the-dropdwon > option {
+  text-align: center;
 }
