--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,12 @@
+html {
+  height: 100%;
+}
+
 body {
-    margin: 0;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0px;
+  height: 100%;
+  background: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
