--- a/client/src/components/Navbar/Toolbar/Toolbar.css
+++ b/client/src/components/Navbar/Toolbar/Toolbar.css
@@ -1,22 +1,25 @@
 .toolbar {
+  font-family: 'Odibee Sans';
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 80px;
+  height: 56px;
   border-bottom: 1px solid rgb(7, 55, 0);
   background: #20500a; /* fallback for old browsers */
   background: -webkit-linear-gradient(
-    to right,
+    to bottom,
     #3e650e,
     #20500a
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
-    to right,
+    to bottom,
     #446d11,
     #20500a
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
+
 
 .spacer {
   flex: 1;
@@ -36,7 +39,7 @@
 .toolbar-logo a {
   color: rgb(255, 255, 255);
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 2.3rem;
 }
 
 .toolbar-navigation-items ul {
@@ -47,12 +50,13 @@
 }
 
 .toolbar-navigation-items li {
-  padding: 0 0.5rem;
+  padding: 0 1.2rem;
 }
 
 .toolbar-navigation-items a {
   color: rgb(255, 255, 255);
   text-decoration: none;
+  font-size: 1.6em;
 }
 
 .toolbar-navigation-items a:hover,
