--- a/client/src/components/PCT/ExtraCard/ExtraCard.module.css
+++ b/client/src/components/PCT/ExtraCard/ExtraCard.module.css
@@ -2,6 +2,8 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.container > h1 {
+.container > h3 {
     text-align: center;
+    margin-top: 60px;
+    font-style: italic;
 }
