--- a/client/src/components/PCT/KeyFacts/KeyFacts.module.css
+++ b/client/src/components/PCT/KeyFacts/KeyFacts.module.css
@@ -1,10 +1,10 @@
 .keyFacts {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Helvetica', sans-serif;
 }
 
 .keyFacts > ul {
   font-size: 18pt;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Helvetica', sans-serif;
 }
 
 .myTable {
