--- a/client/src/components/PCT/TrailSummary/TrailSummary.module.css
+++ b/client/src/components/PCT/TrailSummary/TrailSummary.module.css
@@ -1,8 +1,10 @@
 .container {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Helvetica', sans-serif;
 }
 
 h2 {
     text-align: center;
+    font-family: 'Odibee Sans'; /*for some reason this affects all h2*/
+    font-size: 32px;
 }
 
