--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0px;
   height: 100%;
-  background: white;
+  background: rgb(144, 193, 144);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
