--- a/client/src/components/PCT/TrailImage/TrailImage.module.css
+++ b/client/src/components/PCT/TrailImage/TrailImage.module.css
@@ -7,8 +7,11 @@
   max-height: 600px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 850px) {
   .map > img {
     max-height: 400px;
+  }
+  .map {
+    grid-column: 1;
   }
 }
