--- a/client/src/components/PCT/NoboSobo/NoboSobo.module.css
+++ b/client/src/components/PCT/NoboSobo/NoboSobo.module.css
@@ -2,3 +2,9 @@
     font-family: 'Roboto', sans-serif;
     grid-column: 1 / 3;
 }
+
+@media(max-width: 850px){
+    .container{
+        grid-column: 1;
+    }
+}
