--- a/client/src/components/PCT/Noteworthy/Noteworthy.module.css
+++ b/client/src/components/PCT/Noteworthy/Noteworthy.module.css
@@ -1,3 +1,19 @@
 .container {
     font-family: 'Roboto', sans-serif;
 }
+
+.wildlife {
+    display: flex;
+}
+
+.wildlife > div {
+    margin: 0 auto;
+}
+
+.plants {
+    display: flex;
+}
+
+.plants > div {
+    margin: 0 auto;
+}
