--- a/client/src/components/PCT/NoboSobo/NoboSobo.module.css
+++ b/client/src/components/PCT/NoboSobo/NoboSobo.module.css
@@ -3,6 +3,10 @@
     grid-column: 1 / 3;
 }
 
+/* .noboSoboTable > td {
+    border: 1px solid black;
+} */
+
 @media(max-width: 850px){
     .container{
         grid-column: 1;
