--- a/client/src/components/PCT/NoboSobo/NoboSobo.module.css
+++ b/client/src/components/PCT/NoboSobo/NoboSobo.module.css
@@ -1,11 +1,36 @@
 .container {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Helvetica', sans-serif;
     grid-column: 1 / 3;
 }
 
-/* .noboSoboTable > td {
-    border: 1px solid black;
-} */
+.tableTitle {
+    margin-bottom: 70px;
+}
+
+.noboSoboTable {
+    border-collapse: collapse;
+    background: rgb(200, 230, 200);
+}
+
+.noboSoboTable th {
+    background-color: white;
+    font-size: 30px;
+    font-family: 'Odibee Sans', sans-serif;
+}
+
+.noboSoboTable td {
+    border: 3px solid rgb(15, 50, 15);
+    margin: 0px;
+    padding: 5px;
+    vertical-align: top;
+}
+
+.noboSoboTable td:nth-child(1) {
+    max-width: 12em;
+    text-align: center;
+    background-color: rgb(85, 135, 85);
+    vertical-align: middle;
+}
 
 @media(max-width: 850px){
     .container{
