--- a/client/src/components/PCT/PCT.module.css
+++ b/client/src/components/PCT/PCT.module.css
@@ -34,8 +34,9 @@
 
 @media (max-width: 400px) {
   .wrapper {
+    width: 100%;
     grid-template-columns: 1fr;
-    margin: 0;
+    margin: 5px 0 0 0;
     grid-auto-rows: minmax(60px, auto);
   }
 
