--- a/client/src/components/PCT/PCT.module.css
+++ b/client/src/components/PCT/PCT.module.css
@@ -4,15 +4,16 @@
   grid-template-columns: 1fr 1fr;
   /* grid-column-gap: 1em;
   grid-row-gap: 1em; */
-  grid-gap: .6em;
+  grid-gap: .3em;
   grid-auto-rows: minmax(100px, auto);
 }
 
 .wrapper > div {
   border-radius: 10px;
   padding: 1em;
-  background: rgb(250, 255, 250);
+  background: rgb(255, 255, 255);
   color: rgb(0, 3, 0);
+  border: 3px solid green;
 }
 
 @media(max-width: 850px){
