plants and animals icons

--- a/client/src/components/PCT/Noteworthy/Noteworthy.module.css
+++ b/client/src/components/PCT/Noteworthy/Noteworthy.module.css
@@ -1,19 +1,57 @@
 .container {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  display: grid;
+  grid-gap: 5px;
+}
+
+.noteworthy {
+  grid-column: 1;
+  padding-left: 10px;
+}
+
+.plantsandwild {
+  grid-column: 2;
+  padding-left: 10px;
 }
 
 .wildlife {
-    display: flex;
-}
-
-.wildlife > div {
-    margin: 0 auto;
+  display: flex;
 }
 
 .plants {
-    display: flex;
+  display: flex;
 }
 
-.plants > div {
-    margin: 0 auto;
+#snake {
+  align-content: center;
+  flex: 1;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+#lion {
+  flex: 1;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+#poodle {
+  flex: 1;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+#oak {
+  flex: 1;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+#noteicon {
+    width: 60px;
+    padding-top: 3px;
+    margin-bottom: -5px;
+
 }
