--- a/client/src/components/Navbar/NavModal/NavModal.css
+++ b/client/src/components/Navbar/NavModal/NavModal.css
@@ -1,5 +1,5 @@
 .side-drawer {
-  height: 40%;
+  height: 20%;
   background: white;
   box-shadow: 2px 0px 12px rgba(0, 0, 0, 0.5);
   position: fixed;
@@ -23,20 +23,20 @@
 }
 
 .side-drawer li {
-  margin: 0.4rem 0;
+  /*margin: 0.4rem 0;*/
+  padding: 5px;
 }
 
 .side-drawer a {
-  color: rgb(0, 120, 4);
+  color: rgb(20, 55, 21);
   text-decoration: none;
-  font-size: 1.2rem;
+  font-family: 'Odibee Sans', sans-serif;
+  font-size: 1.6rem;
 }
 
 .side-drawer a:hover,
 .side-drawer a:active {
-  color: rgb(255, 114, 27);
-  text-decoration: none;
-  font-size: 1.2rem;
+  text-decoration: underline;
 }
 
 .side-drawer.open {
