--- a/client/src/components/AT/AT.module.css
+++ b/client/src/components/AT/AT.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+  font-family: 'Helvetica', sans-serif;
   margin: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -9,9 +10,11 @@
 }
 
 .wrapper > div {
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 1em;
-  background: rgb(245, 255, 245);
+  background: rgb(255, 255, 255);
+  color: rgb(0, 3, 0);
+  border: 3px solid green;
 }
 
 @media(max-width: 850px) {
