--- a/client/src/components/AT/TrailImage/TrailImage.module.css
+++ b/client/src/components/AT/TrailImage/TrailImage.module.css
@@ -1,14 +1,69 @@
-.map {
-  grid-row: 1/3;
+.wrapper {
+  grid-column: 1 / 3;
+}
+
+.mainTitle {
+  margin: 26px;
+  font-family: 'Odibee Sans', sans-serif;
+  text-decoration: underline;
   text-align: center;
+  font-size: 40px;
+}
+
+.wrapperInWrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.wrapperInWrapper div {
+  margin: 0 auto;
 }
 
 .map > img {
   max-height: 600px;
 }
 
-@media (max-width: 850px) {
+
+.moreStatsTable {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border-collapse: collapse;
+  text-align: center;
+  background: rgb(200, 230, 200);
+}
+
+.moreStatsTable th {
+  border: 4px solid rgb(15, 50, 15);
+  margin: 0px;
+  padding: 2px;
+  background-color: rgb(85, 135, 85);
+}
+
+.moreStatsTable td {
+  border: 3px solid rgb(15, 50, 15);
+  margin: 0px;
+  padding: 2px;
+}
+
+.moreStatsTable td:nth-child(1) {
+  text-align: left;
+}
+
+.moreStatsTable tr:nth-child(2n) {
+    background-color: rgb(141, 234, 141);
+}
+
+@media (max-width: 820px) {
   .map > img {
-    max-height: 400px;
+    max-height: 450px;
   }
+  .wrapper {
+    grid-column: 1 / 2;
+  }
+  .wrapperInWrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
