--- a/client/src/components/AT/GearRec/GearRec.module.css
+++ b/client/src/components/AT/GearRec/GearRec.module.css
@@ -1,34 +1,59 @@
+.gear {
+  font-family: 'Helvetica', sans-serif;
+  text-align: center;
+}
+
+.gearName {
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.saleItems {
+  display: inline;
+  justify-content: center;
+}
+
 .tentDiv {
-    width: 150px;
-    text-align: center;
-    padding: 5px;
-  }
-  
-  .tentDiv > h5 {
-    display: inline;
-  }
-  
-  a > img {
-    display: block;
-    margin: 0 auto;
-    height: 150px;
-  }
-  
-  #tentButton {
-    display: block;
-    margin: 0 auto;
-    font-style: none;
-    text-decoration: none;
-    border: 1px solid green;
-    text-align: center;
-    width: 65px;
-    padding: 5px;
-    color: rgb(0, 79, 0);
-    background: rgb(197, 255, 146);
-    font-weight: bold;
-  }
-  
-  #tentButton:hover {
-    color: rgb(0, 79, 0);
-    background: rgb(235, 255, 133);
-  }
+  width: 220px;
+  padding: 15px;
+  margin: 0 auto;
+  border: 2px solid rgb(0, 91, 0);
+  border-radius: 5px;
+}
+
+.ourReview {
+  font-family: 'Odibee Sans', sans-serif;
+  font-size: 22px;
+  text-decoration: underline;
+}
+
+.p {
+  text-align: left;
+  margin: 22px;
+}
+
+#productImage {
+  display: block;
+  margin: 0 auto;
+  height: 150px;
+}
+
+#tentButton {
+  display: block;
+  margin: 0 auto;
+  font-style: none;
+  text-decoration: none;
+  border: 1px solid green;
+  text-align: center;
+  width: 75px;
+  padding: 5px;
+  color: rgb(0, 79, 0);
+  background: rgb(164, 255, 84);
+  font-weight: bold;
+}
+
+#tentButton:hover {
+  color: rgb(0, 79, 0);
+  background: rgb(102, 218, 0);
+}
