--- a/client/src/components/AT/GearRec/GearRec.module.css
+++ b/client/src/components/AT/GearRec/GearRec.module.css
@@ -35,18 +35,19 @@
 
 #productImage {
   display: block;
-  margin: 0 auto;
+  margin: 5px auto 0 auto;
   height: 150px;
+  border: 1px solid gray;
 }
 
-#tentButton {
+#jacketButton {
   display: block;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
   font-style: none;
   text-decoration: none;
   border: 1px solid green;
   text-align: center;
-  width: 75px;
+  width: 100px;
   padding: 5px;
   color: rgb(0, 79, 0);
   background: rgb(164, 255, 84);
