centers noteworthy title

--- a/client/src/components/AT/GearRec/GearRec.module.css
+++ b/client/src/components/AT/GearRec/GearRec.module.css
@@ -53,7 +53,7 @@
   font-weight: bold;
 }
 
-#tentButton:hover {
+#jacketButton:hover {
   color: rgb(0, 79, 0);
   background: rgb(102, 218, 0);
 }
