--- a/client/src/components/PCT/Noteworthy/Noteworthy.module.css
+++ b/client/src/components/PCT/Noteworthy/Noteworthy.module.css
@@ -4,6 +4,12 @@
   grid-gap: 5px;
 }
 
+#noteworthyTitle {
+  grid-column: 1/3;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .noteworthy {
   grid-column: 1;
   padding-left: 10px;
