--- a/client/src/components/CDT/KeyFacts/KeyFacts.module.css
+++ b/client/src/components/CDT/KeyFacts/KeyFacts.module.css
@@ -1,8 +1,53 @@
 .keyFacts {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Helvetica', sans-serif;
+}
+
+.keyFacts > ul {
+  font-size: 18px;
+  font-family: 'Helvetica', sans-serif;
+}
+
+.keyFactsTable {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 340px;
+  margin: 0 auto;
+  border-collapse: collapse;
+  text-align: center;
+  background-color: rgb(200, 230, 200);
+}
+
+.keyFactsTable td {
+  border: 3px solid rgb(15, 50, 15);
+}
+
+.keyFactsTable td:nth-child(1) {
+  min-width: 7.1em;
+  text-align: left;
+  background-color: rgb(85, 135, 85);
+}
+
+.tableInsideTable td {
+  min-width: 5.6em;
+  border: none;
+}
+
+#California {
+  font-weight: inherit;
+  background-color: rgb(200, 230, 200);
+}
+
+#Oregon {
+  font-weight: inherit;
+  background-color: rgb(200, 230, 200);
+}
+
+#Washington {
+  font-weight: inherit;
+  background-color: rgb(200, 230, 200);
+}
+
+@media(max-width: 400px){
+  .myTable {
+      max-width: 300px;
   }
-  
-  .keyFacts > ul {
-    font-size: 18pt;
-    font-family: 'Roboto', sans-serif;
-  }
+}
