--- a/client/src/components/LT/LT.module.css
+++ b/client/src/components/LT/LT.module.css
@@ -1,17 +1,20 @@
 .wrapper {
+  font-family: 'Helvetica', sans-serif;
   margin: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   /* grid-column-gap: 1em;
   grid-row-gap: 1em; */
-  grid-gap: 1em;
+  grid-gap: .3em;
   grid-auto-rows: minmax(100px, auto);
 }
 
 .wrapper > div {
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 1em;
-  background: rgb(233, 255, 228);
+  background: rgb(255, 255, 255);
+  color: rgb(0, 3, 0);
+  border: 3px solid green;
 }
 
 @media(max-width: 850px){
@@ -22,7 +25,24 @@
     grid-auto-rows: minmax(80px, auto);
   }
 
+  .wrapper > div {
+    border-radius: 0;
+  }
+
   .map > img {
     max-height: 400px;
+  }
+}
+
+@media (max-width: 400px) {
+  .wrapper {
+    width: 100%;
+    grid-template-columns: 1fr;
+    margin: 5px 0 0 0;
+    grid-auto-rows: minmax(60px, auto);
+  }
+
+  .wrapper > div {
+    border-radius: 0;
   }
 }
