--- a/client/src/components/Navbar/NavModal/NavModal.css
+++ b/client/src/components/Navbar/NavModal/NavModal.css
@@ -30,7 +30,7 @@
 .side-drawer a {
   color: rgb(20, 55, 21);
   text-decoration: none;
-  font-family: 'Odibee Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
 }
 
