--- a/client/src/components/PCT/NoboSobo/NoboSobo.module.css
+++ b/client/src/components/PCT/NoboSobo/NoboSobo.module.css
@@ -15,7 +15,7 @@
 .noboSoboTable th {
     background-color: white;
     font-size: 30px;
-    font-family: 'Odibee Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .noboSoboTable td {
