--- a/client/src/components/PCT/TrailSummary/TrailSummary.module.css
+++ b/client/src/components/PCT/TrailSummary/TrailSummary.module.css
@@ -4,7 +4,7 @@
 
 h2 {
     text-align: center;
-    font-family: 'Odibee Sans'; /*for some reason this affects all h2*/
+    font-family: 'Montserrat'; /*for some reason this affects all h2*/
     font-size: 32px;
 }
 
