--- a/client/src/components/TrailTables/AllTrailsTable/AllTrailsTable.module.css
+++ b/client/src/components/TrailTables/AllTrailsTable/AllTrailsTable.module.css
@@ -6,7 +6,7 @@
 .tableTitle {
   font-size: 38px;
   margin: 26px;
-  font-family: 'Odibee Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: rgb(0, 20, 0);
 }
 
