--- a/client/src/components/AT/GearRec/GearRec.module.css
+++ b/client/src/components/AT/GearRec/GearRec.module.css
@@ -23,7 +23,7 @@
 }
 
 .ourReview {
-  font-family: 'Odibee Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 22px;
   text-decoration: underline;
 }
