--- a/client/src/components/AT/TrailImage/TrailImage.module.css
+++ b/client/src/components/AT/TrailImage/TrailImage.module.css
@@ -4,7 +4,7 @@
 
 .mainTitle {
   margin: 26px;
-  font-family: 'Odibee Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-decoration: underline;
   text-align: center;
   font-size: 40px;
