index background on tiny screens goes white

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@media (max-width: 310px) {
+  body {
+    background: white;
+  }
+}
