--- a/client/src/components/AT/TrailImage/TrailImage.module.css
+++ b/client/src/components/AT/TrailImage/TrailImage.module.css
@@ -5,9 +5,13 @@
 .mainTitle {
   margin: 26px;
   font-family: 'Montserrat', sans-serif;
-  text-decoration: underline;
   text-align: center;
   font-size: 40px;
+}
+
+.fourteenStatesTitle {
+  margin-bottom: 2px;
+  font-size: 28px;
 }
 
 .wrapperInWrapper {
