--- a/client/src/components/AT/Noteworthy/Noteworthy.module.css
+++ b/client/src/components/AT/Noteworthy/Noteworthy.module.css
@@ -1,3 +1,7 @@
+#noteworthyTitle {
+    margin-bottom: 0px;
+}
+
 .animals {
     display: flex;
     align-items: center;
@@ -6,8 +10,36 @@
 }
 
 .wildTitle {
+    margin-top: 34px;
     margin-bottom: 0;
     padding-bottom: 0;
+}
+
+.titleAndCannonIcon {
+    display: flex;
+}
+
+.cannonIconWrapper {
+    margin-top: 14px;
+    margin-right: 10px;
+}
+
+#cannonIcon {
+    width: 26px;
+}
+
+.titleAndTrainIcon {
+    display: flex;
+}
+
+.trainIconWrapper {
+    margin-top: 12px;
+    margin-right: 10px;
+    height: 30px;
+}
+
+#trainIcon {
+    width: 30px;
 }
 
 .moose {
